[tool.poetry]
name = "jetty"
version = "0.1.0"
description = ""
authors = ["Andrew Halberstadt <ahal@pm.me>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.6"
pytoml = "^0.1.20"
poetry = { path = "vendor/poetry-0.12.11" }
cleo = "^0.6.7"

[tool.poetry.dev-dependencies]
pytest = "^4.3"

[tool.poetry.scripts]
jetty = "jetty.cli:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
