[tool.poetry]
name = "jetty"
version = "0.1.0"
description = ""
authors = ["Andrew Halberstadt <ahal@pm.me>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "~2.7 || ^3.4"
cleo = { path = "vendor/cleo-0.6.8" }
poetry = { path = "vendor/poetry-0.12.11" }
tomlkit = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
flake8 = "^3.7"

[tool.poetry.scripts]
jetty = "jetty.cli:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
