[tool.poetry]
name = "jetty"
version = "0.2.3"
description = ""
authors = ["Andrew Halberstadt <ahal@pm.me>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "~2.7 || ^3.4"
poetry = "^0.12.11"
cleo = "^0.6.7"
tomlkit = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
flake8 = "^3.7"
tox = "^3.9"
flake8-import-order = "^0.18.1"

[tool.poetry.scripts]
jetty = "jetty.cli:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
